--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,9 @@ body {
   line-height: 1.8;
 }
 
-/*.container { margin-top: 25px; }*/
+@media(max-width: 630px) {
+  .container { padding: 10px; }
+}
 
 h1, h2, h3, h4 { margin-bottom: 10px; }
 h1 { font-size: 2.8em; }
